data/derived/comb/progs/unify/prog4764.ml.out
Characters 131-132:
  | Cosine e -> "cos(" ^ e ^ ")"
                         ^
Error: This expression has type expr but an expression was expected of type
         string
